<resources>
    <string name="app_name">Test App</string>
    <string name="the_new_empire">The new empire</string>
    <string name="godzillaxkong">GodzillaxKong</string>
    <string name="rise_together">Rise together</string>
    <string name="fall_alone">Fall alone</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="signup_image">signup_image</string>
    <string name="monsterverse">Monsterverse</string>
    <string name="mcu">MCU</string>
    <string name="starwars">StarWars</string>
    <string name="wizarding_world">Wizarding World</string>
    <string name="wizardingworld">wizardingWorld</string>
    <string name="mcu2">MCU</string>
    <string name="dcu">DCU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>