<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Relative_layoutActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:text="@string/monsterverse"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starwars"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:padding="5dp"
        android:layout_toEndOf="@+id/text_view"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view3"
        android:text="@string/wizardingworld"
        android:textSize="30sp"
        android:layout_below="@+id/text_view2"
        android:layout_margin="5dp"
        android:textColor="#9C27B0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view4"
        android:text="@string/mcu2"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:textColor="#FF9800"/>

    <TextView
        android:id="@+id/text_view5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@+id/text_view4"
        android:text="@string/dcu"
        android:textColor="#009688"
        android:textSize="30sp"
        android:layout_marginStart="5dp"/>


</RelativeLayout>